--- a/partners/css/components/2-layout/components.scss
+++ b/partners/css/components/2-layout/components.scss
@@ -73,6 +73,22 @@ p {
     line-height: 170%;
   }
 }
+.title2 {
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: $white;
+}
+.paragraph {
+  font-size: 23px;
+  line-height: 160%;
+  &.ex {
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 130%;
+  }
+}
 .main {
   overflow: hidden;
 }
@@ -90,7 +106,17 @@ p {
   border-radius: 4px;
   cursor: pointer;
   transition: 0.3s ease;
+  &.primary {
+    background-color: $primary;
+    padding: 14px 30px;
+    font-size: 21px;
+    line-height: 100%;
+    font-family: $sourceSans;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
   &:hover {
+    opacity: 1;
     background-color: $main;
   }
 }
@@ -152,7 +178,7 @@ p {
     &::before {
       position: absolute;
       content: "";
-      background-image: url("../images/icons/quotation-start.svg");
+      background-image: url("../../images/icons/quotation-start.svg");
       width: 40px;
       height: 40px;
       top: 0;
@@ -161,7 +187,7 @@ p {
     &:after {
       position: absolute;
       content: "";
-      background-image: url("../images/icons/quotation-end.svg");
+      background-image: url("../../images/icons/quotation-end.svg");
       width: 40px;
       height: 40px;
       bottom: 0;
@@ -311,6 +337,52 @@ p {
     }
   }
 }
+.uinput {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  &__outer {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 12px;
+    &.active {
+      input {
+        box-shadow: inset 2px 0 0 0 #e04562;
+      }
+      span {
+        display: block;
+        animation: fadeIn .3s;
+      }
+    }
+    span {
+      font-size: 14px;
+      line-height: 100%;
+      padding: 9px 10px;
+      margin-top: 5px;
+      display: none;
+      transition: 0.3s ease;
+      background-color: #f9e4e8;
+      color: #e04562;
+    }
+  }
+  input {
+    width: 100%;
+    height: 100%;
+    padding: 10px 12px;
+    border-radius: 5px;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 400;
+    font-family: $sourceSans;
+    background-color: #f9f9f9;
+    color: $black;
+    transition: 0.3s ease;
+    &::placeholder {
+      color: #636c72;
+    }
+  }
+}
 .scrollUp {
   position: fixed;
   bottom: -1px;
@@ -358,7 +430,8 @@ p {
       display: flex;
       .modals__item {
         &-video {
-          video, iframe {
+          video,
+          iframe {
             display: block;
           }
         }
@@ -420,48 +493,49 @@ p {
   }
 }
 .cookie {
-    position: fixed;
-    z-index: 1049;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 16px 0;
-    background: $white;
-    color: $black;
-    border-top: 1px solid #e1e0e3;
-    font-size: 14px;
-    line-height: 150%;
-    display: none;
-    &.active {
-      display: block;
-    }
-    &__inner {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      p {
-        width: calc(100% - 200px);
-        b {
-          font-weight: 600;
-        }
-        a {
-          color: $primary;
-          &:hover {
-            color: $black;
-          }
-        }
+  position: fixed;
+  z-index: 1049;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 16px 0;
+  background: $white;
+  color: $black;
+  border-top: 1px solid #e1e0e3;
+  font-size: 14px;
+  line-height: 150%;
+  display: none;
+  &.active {
+    display: block;
+  }
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    p {
+      width: calc(100% - 200px);
+      b {
+        font-weight: 600;
       }
-      .button {
-        padding: 14px 30px;
-        background-color: $main;
-        border-radius: 8px;
-        white-space: nowrap;
-        font-size: 16px;
-        line-height: 100%;
+      a {
+        color: $primary;
         &:hover {
-          background-color: $purple;
-          box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.16), 0 3px 12px 0 rgba(0, 0, 0, 0.12);
+          color: $black;
         }
       }
     }
+    .button {
+      padding: 14px 30px;
+      background-color: $main;
+      border-radius: 8px;
+      white-space: nowrap;
+      font-size: 16px;
+      line-height: 100%;
+      &:hover {
+        background-color: $purple;
+        box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.16),
+          0 3px 12px 0 rgba(0, 0, 0, 0.12);
+      }
+    }
+  }
 }
