--- a/partners/css/fonts/stylesheet.css
+++ b/partners/css/fonts/stylesheet.css
@@ -27,3 +27,24 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('SourceSansPro-Regular.ttf') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('SourceSansPro-Bold.otf') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('SourceSansPro-Black.otf') format('woff2');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
