--- a/partners/css/main.scss
+++ b/partners/css/main.scss
@@ -13,5 +13,6 @@
 
 // 3-pages components
 @import "./components/3-pages/index.scss";
+@import "./components/3-pages/mortgage.scss";
 // responsive
 @import "./components/2-layout/responsive.scss";
